<resources>
    <string name="app_name">1stpage</string>
    <string name="btn1">Get Start -></string>
    <string name="labal_name">AMA Restaurant</string>
    <string name="lable_f1">Fried Rice</string>
    <string name="lable_f2">Kottu</string>
    <string name="lable_f3">Noodles</string>
    <string name="lable_f4">Short eats</string>
    <string name="lable_f5">Salade</string>
    <string name="lable_f6">Dessert</string>
    <string name="labl_edt1">Search</string>
    <string name="image">girl</string>
    <string name="image_13">searchicon</string>
    <string name="image_12">Searchbar</string>
    <string name="image_3">FrieRice</string>
    <string name="image_2">Kottu</string>
    <string name="image_5">Noodles</string>
    <string name="image_6">Shorteats</string>
    <string name="image_8">Salade</string>
    <string name="image_7">dessert</string>
    <string name="image_18">Home</string>
    <string name="image_19">searchicon</string>
    <string name="image_24">profile</string>
    <string name="image_15">shoppingcart</string>
    <string name="image_14">Kottu</string>
    <string name="image_16">whitebackground</string>
    <string name="lable_f8"><b>Rs.1000.00</b></string>
    <string name="labal_9"><b>Kottu</b></string>
    <string name="labal_10">Kottu with fried chicken, chili paste and tomato sourse.</string>
    <string name="btn5"><b>Add to Cart</b></string>
    <string name="labal_11"><b>Dessert</b></string>
    <string name="labal_12">Fruit salade = Rs. 350.00</string>
    <string name="labal_13">Watalappan = Rs. 400.00</string>
    <string name="labal_14"> Pudding = Rs. 350.00</string>
    <string name="btn2">Add to Cart</string>
    <string name="labal_15"><b>2 items in cart</b></string>
    <string name="image_17">kottucart</string>
    <string name="labal_16">Rs.1000.00</string>
    <string name="image_20">dessertcart</string>
    <string name="labal_17">Rs.350.00</string>
    <string name="image_21">add</string>
    <string name="image_22">mini</string>
    <string name="labal_18"><b>Total :</b> </string>
    <string name="labal_19"><b>Delivery Charge :</b> </string>
    <string name="labal_20"><b>Sub Total :</b> </string>
    <string name="labal_21"><b>Rs.1350.00</b> </string>
    <string name="labal_22"><b>Rs.200.00</b> </string>
    <string name="labal_23"><b>Rs.1550.00</b> </string>
    <string name="btn3">CheckOut</string>
    <string name="image_23">Navigationbar</string>
    <string name="labal_24"><b>Profile</b> </string>
    <string name="labal_25"><i>Hi Amanada,</i> </string>
    <string name="labal_26">Name - T.A.Fernando</string>
    <string name="labal_27">Gender - Female</string>
    <string name="labal_28">Phone - +94 41543133</string>
    <string name="btn4">Bank Details</string>
    <string name="btn6">Menu</string>
    <string name="labal_29"><b>Bank Details</b></string>
    <string name="labal_30"><b>Name:</b></string>
    <string name="labal_31"><b>Card No:</b></string>
    <string name="labal_32"><b>Expier Date:</b></string>
    <string name="labal_33"><b>CCV:</b></string>
    <string name="etd_1">Enter Name</string>
    <string name="etd_2">Card No</string>
    <string name="etd_3">Date</string>
    <string name="etd_4">CCV</string>
    <string name="btn7">Save</string>
    <string name="btn8">Menu</string>
    <string name="image_25">Correct</string>
    <string name="labal_34"><b>Successful Payment</b></string>
    <string name="image_26">Back</string>
</resources>