<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="290dp"
        android:layout_height="32dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="120dp"
        android:background="#8AECE8E8"
        android:contentDescription="@string/image_12"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/selectableItemBackground" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="134dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="Menu"
        android:textColor="#0C0C0C"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="51dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="23dp"
        android:contentDescription="@string/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/download" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="108dp"
        android:layout_height="90dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/image_2"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/kottu1" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="117dp"
        android:layout_height="136dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="55dp"
        android:contentDescription="@string/image_3"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/friedrice" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="115dp"
        android:layout_height="90dp"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/image_5"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView12"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/noodles" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="113dp"
        android:layout_height="131dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/image_6"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/imageView8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/shorteats" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="103dp"
        android:layout_height="80dp"
        android:layout_marginTop="65dp"
        android:contentDescription="@string/image_7"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.495"
        app:srcCompat="@drawable/dessert" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="99dp"
        android:layout_height="125dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/image_8"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/salade" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/lable_f1"
        android:text="@string/lable_f1"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="79dp"
        android:layout_height="28dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/lable_f2"
        android:text="@string/lable_f2"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:text="@string/lable_f3"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/lable_f4"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/lable_f5"
        android:textColor="#050505"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/lable_f6"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="125dp"
        android:contentDescription="@string/image_13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?android:attr/actionModeWebSearchDrawable" />

    <EditText
        android:id="@+id/editTextText4"
        style="@style/Widget.Material3.AutoCompleteTextView.FilledBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="178dp"
        android:ems="10"
        android:hint="@string/labl_edt1"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="405dp"
        android:layout_height="35dp"
        android:layout_marginTop="228dp"
        android:background="#BA8E8888"
        android:backgroundTint="#DAD3D3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:srcCompat="@android:drawable/list_selector_background" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="36dp"
        android:layout_height="28dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="236dp"
        android:contentDescription="@string/image_19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/search" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="32dp"
        android:layout_height="29dp"
        android:layout_marginStart="228dp"
        android:layout_marginTop="232dp"
        android:contentDescription="@string/image_15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:srcCompat="@drawable/shoppingcart" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="34dp"
        android:layout_height="39dp"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="36dp"
        android:contentDescription="@string/image_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@drawable/profile" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="32dp"
        android:layout_height="26dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="232dp"
        android:contentDescription="@string/image_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/home" />

</androidx.constraintlayout.widget.ConstraintLayout>